added range checks on column meta data added VOTable format check (resource name='SearchCal ...') reduced memory footprint for star properties: - empty values are null - origin / confidence index use a simple instance cache Use FileUtils.readFile() to get votable as string allocate 128K for votable buffer in getVOTable() removed several useless log entering statements